<resources>
    <string name="app_name" translatable="false">WhenWasIt</string>
    <string name="build_version">Build version</string>
    <string name="loading_contacts">Loading contacts…</string>
    <string name="contacts_uploaded">Contacts imported</string>
    <string name="loading_contacts_error">Unable to import contacts, nonstandard date format</string>
    <string name="permission_required">Permission is required for importing contacts</string>
    <string name="snackbar_allow_text">Allow</string>
    <string name="all">All</string>
    <string name="famous">Famous</string>
    <string name="age">Current age:\u0020</string>
    <string name="happy_birthday">Happy Birthday!</string>
    <string name="google_search" translatable="false">https://www.google.com/search?q=</string>
    <string name="web_search_error">Unable to perform action, please install web browser</string>
    <string name="delete_record_text">Are you sure you want to delete this record:\u0020</string>
    <string name="record_deleted">Record deleted</string>
    <string name="undo">Undo</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="action_sync">Synchronization</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="new_record">New record</string>
    <string name="add_from_contacts">Add from contacts</string>
    <string name="open_contacts_error">Unable to perform action due to device features</string>
    <string name="name">Name</string>
    <string name="anniversary_type">Anniversary type</string>
    <string name="error_hint">Please enter the name</string>
    <string name="phone_number">Phone number</string>
    <string name="email" translatable="false">Email</string>
    <string name="pick_date">Pick date</string>
    <string name="wrong_date">Wrong date</string>
    <string name="year_unknown">I don\'t know year</string>
    <string name="ok_button" translatable="false">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="record_added">Record added</string>
    <string name="birthday">Birthday</string>
    <string name="days_left">Days until next occurrence</string>
    <string name="today">Today</string>
    <string name="days_since_birth">Days since anniversary started</string>
    <string name="zodiac_sign">Zodiac sign</string>
    <string name="contact_category">Contact category</string>
    <string name="season_picture">Season picture</string>
    <string name="calendar">Calendar</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="generic_message">Select program to wish happy birthday</string>
    <string name="born_on_this_day">Born on this day</string>
    <string name="editing_label">Editing</string>
    <string name="record_edited">Record edited</string>
    <string name="security_exception">SecurityException, Samsung devices restrict the number of alarms you can register</string>
    <string name="channel_name">Birthdays</string>
    <string name="birthdays">Birthdays</string>
    <string name="friends">Friends</string>
    <string name="family">Family</string>
    <string name="aries">Aries</string>
    <string name="taurus">Taurus</string>
    <string name="gemini">Gemini</string>
    <string name="cancer">Cancer</string>
    <string name="leo">Leo</string>
    <string name="virgo">Virgo</string>
    <string name="libra">Libra</string>
    <string name="scorpio">Scorpio</string>
    <string name="sagittarius">Sagittarius</string>
    <string name="capricorn">Capricorn</string>
    <string name="aquarius">Aquarius</string>
    <string name="pisces">Pisces</string>
    <string name="notifications_key" translatable="false">notifications_key</string>
    <string name="notification_time_key" translatable="false">notification_time_key</string>
    <string name="additional_notification_key" translatable="false">additional_notification_key_multi</string>
    <string name="ringtone_key" translatable="false">ringtone_key</string>
    <string name="help_key" translatable="false">help_key</string>
    <string name="import_contacts_key" translatable="false">import_contacts_key</string>
    <string name="import_contacts_automatically_key" translatable="false">import_contacts_automatically_key</string>
    <string name="export_key" translatable="false">export_key</string>
    <string name="recover_key" translatable="false">recover_key</string>
    <string name="night_mode_key" translatable="false">night_mode_key</string>
    <string name="start_page_key" translatable="false">start_page_key</string>
    <string name="displayed_age_key" translatable="false">displayed_age_key</string>
    <string name="rate_app_key" translatable="false">rate_app_key</string>
    <string name="share_key" translatable="false">share_key</string>
    <string name="ad_interstitial_key" translatable="false">ad_interstitial_key</string>
    <string name="ad_banner_key" translatable="false">ad_banner_key</string>
    <string name="source_code_key" translatable="false">source_code_key</string>
    <string name="privacy_policy_key" translatable="false">privacy_policy_key</string>
    <string name="licenses_key" translatable="false">licenses_key</string>
    <string name="optimization_enabled">Optimization enabled!</string>
    <string name="optimization_description">\nStarting from version 6.0, Android introduced power-saving mode Doze that manage apps behavior by deferring background CPU.\n\nTo make app work correctly disable optimization for WhenWasIt.</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="disable_button">Disable</string>
    <string name="notifications">Notifications</string>
    <string name="allow_notification">Allow the app to send notifications of upcoming birthdays</string>
    <string name="notifications_time">Notification time</string>
    <string name="default_time_preference" translatable="false">645703200000</string>
    <string name="additional_notification">Additional notifications</string>
    <string name="never">Never</string>
    <string-array name="additional_notification_entries">
        <item>1 day before</item>
        <item>2 days before</item>
        <item>3 days before</item>
        <item>1 week before</item>
        <item>2 weeks before</item>
    </string-array>
    <string-array name="additional_notification_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>7</item>
        <item>14</item>
    </string-array>
    <string-array name="additional_notification_delay">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>In 2 days</item>
        <item>In 3 days</item>
        <item>In a week</item>
        <item>In 2 weeks</item>
    </string-array>
    <string name="notification_tone">Notification tone</string>
    <string name="ringtone_summary">Choose a sound for notification. By default is used tone from the device settings</string>
    <string name="help">Help</string>
    <string name="tap_here">Tap here if you don\'t receive notifications</string>
    <string name="general">General</string>
    <string name="rate_app">Rate app</string>
    <string name="play_market_app_link" translatable="false">https://play.google.com/store/apps/details?id=com.eblis.whenwasit</string>
    <string name="about_app">About app</string>
    <string name="menu_github">Source code</string>
    <string name="github_url" translatable="false">https://github.com/eblis/Birdays</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_link" translatable="false">https://rawgit.com/eblis/Birdays/whenwasit/PRIVACY POLICY.html</string>
    <string name="software_licenses">Open-source and icons licenses</string>
    <string name="help_header">Why alarm is not working?</string>
    <string name="help_description">Some devices have Power Saving Mode that could block app background processes or disable application from running on startup.\nTo make alarm work correctly perform a few simple steps below:\n\n1. Make sure that notifications are enabled for WhenWasIt app (Settings > Apps > WhenWasIt).\n\n2. If you have installed task managers, task killers or RAM optimizers (e.g. «Battery Saver», «Clean Master»), which could block app background processes, add WhenWasIt to their whitelist.\n\n3. Turn off your power-saving mode or add WhenWasIt to the whitelist (Settings > Battery > Battery optimization).\nOnly for devices running Android 6.0 (Marshmallow) or higher.</string>
    <string name="help_delay_text">Please note that on some devices notifications could work with some delay.</string>
    <string name="huawei_header">For Huawei owners</string>
    <string name="huawei_description">Open device «Settings», go to «Power saving» and open «Protected apps». Make sure that this feature is enabled for WhenWasIt.</string>
    <string name="samsung_header">For Samsung owners</string>
    <string name="samsung_description">Open «Smart Manager», tap on «Battery», then on «Detail». Disable this feature for WhenWasIt app.</string>
    <string name="xiaomi_header">For Xiaomi owners</string>
    <string name="xiaomi_description">Open device «Settings», go to «Battery &amp; performance», then «Manage apps battery usage», open «Choose apps», choose «No restrictions» for WhenWasIt.</string>
    <string name="help_email_description">If alarm still not working, please contact me at eblis102@gmail.com</string>
    <string name="icons" translatable="false">Icons provided by FreePik and FlatIcon</string>
    <string name="icons_copyright" translatable="false">Most icons used with attribution from FlatIcon (www.flaticon.com) and FreePik (www.freepik.com)</string>
    <string name="icons_text" translatable="false">
        <a href='https://www.freepik.com/vectors/background'>Background vector created by macrovector - www.freepik.com</a>
        \nIcons made by <a href="https://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
        \nIcons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
    </string>
    <string name="butter_knife_by_jake_wharton" translatable="false">Butter Knife by Jake Wharton</string>
    <string name="butter_knife_copyright" translatable="false">Copyright 2013 Jake Wharton</string>
    <string name="mdtp_by_wouter_dullaert" translatable="false">MaterialDateTimePicker by Wouter Dullaert</string>
    <string name="mdtp_copyright" translatable="false">Copyright 2015 Wouter Dullaert</string>
    <string name="rta_by_keisuke_kobayashi" translatable="false">RateThisApp by Keisuke Kobayashi</string>
    <string name="rta_copyright" translatable="false">Copyright 2013-2017 Keisuke Kobayashi</string>
    <string name="apache_license" translatable="false">Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
</resources>