<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2017 Evgeny Timofeev

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            style="@style/Licenses.Primary.TextView"
            android:paddingBottom="@dimen/default_padding"
            android:text="@string/icons" />

        <TextView
            style="@style/Licenses.Secondary.TextView"
            android:text="@string/icons_copyright" />

        <TextView
            style="@style/Licenses.Secondary.TextView"
            android:text="@string/icons_text" />


        <TextView
            style="@style/Licenses.Primary.TextView"
            android:paddingBottom="@dimen/default_padding"
            android:text="@string/butter_knife_by_jake_wharton" />

        <TextView
            style="@style/Licenses.Secondary.TextView"
            android:text="@string/butter_knife_copyright" />

        <TextView
            style="@style/Licenses.Secondary.TextView"
            android:text="@string/apache_license" />

        <TextView
            style="@style/Licenses.Primary.TextView"
            android:paddingBottom="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/mdtp_by_wouter_dullaert" />

        <TextView
            style="@style/Licenses.Secondary.TextView"
            android:text="@string/mdtp_copyright" />

        <TextView
            style="@style/Licenses.Secondary.TextView"
            android:text="@string/apache_license" />

        <TextView
            style="@style/Licenses.Primary.TextView"
            android:paddingBottom="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/rta_by_keisuke_kobayashi" />

        <TextView
            style="@style/Licenses.Secondary.TextView"
            android:text="@string/rta_copyright" />

        <TextView
            style="@style/Licenses.Secondary.TextView"
            android:text="@string/apache_license" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>