<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:textSize="16sp">
            </EditText>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4">
            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>


        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_from_contacts"
            android:src="@drawable/ic_contacts_purple_24dp"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etDate"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:hint="@string/pick_date"
            android:inputType="date"
            android:textSize="16sp"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>