<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilName">
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:textSize="16sp">
            </EditText>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/tilPhone">
            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="16sp"/>
        </android.support.design.widget.TextInputLayout>


        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/add_from_contacts"
            android:src="@drawable/add_from_contacts_icon"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/tilEmail">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="16sp"/>

        </android.support.design.widget.TextInputLayout>

        <!--<ImageButton-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:contentDescription="@string/add_from_contacts"-->
            <!--android:src="@drawable/add_from_contacts_icon"-->
            <!--android:clickable="true"-->
            <!--android:background="@android:color/transparent"/>-->

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDate"
        android:inputType="date"
        android:textSize="16sp"
        android:focusableInTouchMode="false"
        android:cursorVisible="false"
        android:hint="@string/pick_date"
        android:layout_marginTop="16dp"
        style="@android:style/Widget.Holo.Spinner"/>
</LinearLayout>